added news module

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 			</ul>
 		</div>
 		
+		<module-two>
+		  <div> my awesome new module about news</div>
+		</module-two>
+		
+		
 	</body>
 </html>
 
